--- a/app/partials/modalBuscarPedido.html
+++ b/app/partials/modalBuscarPedido.html
@@ -131,7 +131,7 @@
 
       <!--</div>-->
 
-      <div class="row">
+      <div class="row condensar-rows">
         <div class="col-md-2">
           <h4>Orçamento</h4>
             <div class="input-group">
@@ -212,7 +212,7 @@
       <!--</div>-->
 
       <br>
-      <div class="row">
+      <div class="row condensar-rows">
         <div class="col-md-12">
           <table class="tabela tabela-bordered tabela-selecionavel tabela-esticada">
             <thead>
