--- a/app/partials/dashboard/follow-up.html
+++ b/app/partials/dashboard/follow-up.html
@@ -10,6 +10,7 @@
     <table class="tabela tabela-bordered tabela-esticada" ng-init="len = 15">
       <thead>
       <tr>
+        <th></th>
         <th>Nome</th>
         <th>Cadastro</th>
         <th>Atualização</th>
@@ -19,13 +20,13 @@
       </thead>
       <tbody>
       <tr ng-repeat="status in configuracoes.statusAtendimentoArray">
+        <td data-label="Cor"><span class="glyphicon"><div class="mostrador-de-cor" ng-style="{backgroundColor:status.cor}"></div></span></td>
         <td data-label="Nome">{{status.nome}}</td>
         <td data-label="Data de cadastro">{{status.dataCadastro | date:'dd/MM/yy'}}</td>
         <td data-label="Última atualização">{{status.dataUpdate ? (status.dataUpdate | date:'dd/MM/yy') : 'Não disponível'}}</td>
         <td class="hidden-xs">
-          <a href="" ng-click="configuracoes.editarStatusAtendimento(status)" ng-if="status.id != '1001' && status.id != '1002'"><span
+          <a href="" ng-click="configuracoes.editarStatusAtendimento(status)"><span
             class="glyphicon glyphicon-pencil"></span></a>
-          <span class="glyphicon glyphicon-lock" ng-if="status.id == '1001' || status.id == '1002'"></span>
         </td>
         <td class="hidden-xs">
           <a href="" ng-click="configuracoes.excluirStatusAtendimento(status)" ng-if="status.id != '1001' && status.id != '1002'"><span
@@ -46,6 +47,7 @@
       </tr>
       <tr class="hidden-xs" ng-if="configuracoes.statusAtendimentoArray.length < configuracoes.statusAtendimentoPagination.max"
           ng-repeat="n in getNumber(configuracoes.statusAtendimentoPagination.max - configuracoes.statusAtendimentoArray.length < 0 ? 0 : configuracoes.statusAtendimentoPagination.max - configuracoes.statusAtendimentoArray.length) track by $index">
+        <td>&nbsp;</td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
@@ -145,9 +147,15 @@
           class="glyphicon glyphicon-remove close" ng-click="configuracoes.cancelarModalStatusAtendimento()"></span></div>
       </div>
       <div class="body xs condensar-rows">
-        <div class="col-md-12">
+        <div class="col-xs-2">
+          <h4>Cor</h4>
+          <div class="botao-color-picker">
+            <div class="mostrador" colorpicker="hex" colorpicker-size="200" ng-model="configuracoes.statusAtendimento.cor" ng-style="{backgroundColor:configuracoes.statusAtendimento.cor}"></div>
+          </div>
+        </div>
+        <div class="col-xs-10">
           <h4>Nome</h4>
-          <input type="text" class="form-control" ng-model="configuracoes.statusAtendimento.nome" keys-shortcuts enter="configuracoes.salvarStatusAtendimento()">
+          <input type="text" class="form-control" ng-model="configuracoes.statusAtendimento.nome" ng-disabled="configuracoes.statusAtendimento.id == '1001' || configuracoes.statusAtendimento.id == '1002'" keys-shortcuts enter="configuracoes.salvarStatusAtendimento()">
         </div>
       </div>
       <div class="footer">
