--- a/app/styles/_follow_up.scss
+++ b/app/styles/_follow_up.scss
@@ -24,15 +24,18 @@
   }
 
   .cliente {
-    max-height: 164px;
-    height: 164px;
+    max-height: 140px;
+    height: 140px;
     overflow-y: auto;
   }
 
   .info {
-    max-height: 165px;
-    height: 165px;
+    max-height: 189px;
+    height: 189px;
     overflow-y: auto;
+    .label {
+      font-weight: 400;
+    }
   }
 
   .historico {
