--- a/app/views/atendimento.html
+++ b/app/views/atendimento.html
@@ -158,7 +158,7 @@
           </button>
         </div>
         <div class="col-xs-6 col-md-6">
-          <button class="btn btn-success btn-lg btn-block" ng-disabled="atendimento.atendimento.isEncerrado()">
+          <button class="btn btn-success btn-lg btn-block" ng-disabled="atendimento.atendimento.isEncerrado()" ng-click="atendimento.continuar()">
             <span class="glyphicon glyphicon-ok"></span>
             Continuar
           </button>
