--- a/app/views/follow_up.html
+++ b/app/views/follow_up.html
@@ -55,13 +55,24 @@
             <td data-label="Código do orçamento">{{a.pedido.codigo}}</td>
             <td data-label="Cliente">{{a.pedido.cliente.nome | truncate:35}}</td>
             <td data-label="Responsável">{{a.historico[0].responsavel.usuario}}</td>
-            <td data-label="Data de Atualização">{{a.dataUpdate | date:'short'}}</td>
+            <td data-label="Data de atualização">{{a.dataUpdate ? (a.dataUpdate | date:'short') : 'Não disponível'}}</td>
             <td data-label="Data do último parecer">{{a.parecer[0].dataCadastro | date:'short'}}</td>
             <td data-label="Data de cadastro">{{a.dataCadastro | date:'short'}}</td>
             <!--<td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-pencil"></span></a></td>-->
             <!--<td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-plus-sign"></span></a></td>-->
             <!--<td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-time"></span></a></td>-->
             <td class="hidden-xs"><a ng-href="#/atendimento/open?type=attendance&code={{a.codigo}}"><span class="glyphicon glyphicon-open-file"></span></a></td>
+          </tr>
+          <tr class="hidden-xs" ng-repeat="n in getNumber(followUp.pagination.max - followUp.atendimentos.length) track by $index">
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
           </tr>
           </tbody>
         </table>
