--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -19,6 +19,7 @@
         <ul class="nav navbar-nav" tabindex="-1">
           <li><a ng-href="#/home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li><a ng-href="#/orcamento"><span class="glyphicon glyphicon-shopping-cart"></span> Orçamento</a></li>
+          <li><a ng-href="#/follow-up"><span class="glyphicon glyphicon-comment"></span> Follow Up</a></li>
           <li><a ng-href="#/"><span class="glyphicon glyphicon-user"></span> Clientes</a></li>
           <!--<li><a ng-href="#/"><span class="glyphicon glyphicon-refresh"></span> Atualização</a></li>-->
           <li><a ng-href="#/configuracoes"><span class="glyphicon glyphicon-cog"></span> Configurações</a></li>
